# tech2ai

./: README.md  pyproject.toml
segment1/: lab1.ipynb  lab2.ipynb  lab3.ipynb
segment2/: lab1.ipynb  lab2.ipynb
segment3/: evaluator.py  lab1.ipynb  new_neural_network.ipynb
segment4/: agent1.ipynb  agent2.ipynb  agent3b.ipynb  agent4.ipynb  agent5.ipynb
segment4/legacy/: agent1.ipynb  agent2.ipynb  agent3.ipynb  agent5.ipynb
segment4/price_agents/: autonomous_planning_agent.py  frontier_agent.py  messaging_agent.py  scanner_agent.py
segment4/sandbox/: deals.md
setup/: SETUP-new.md
