[project]
name = "tech2ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.4",
    "datasets==3.6.0",
    "feedparser>=6.0.12",
    "func-timeout>=4.3.5",
    "gradio>=5.49.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter-dash>=0.4.2",
    "litellm>=1.79.1",
    "matplotlib>=3.10.7",
    "modal>=1.2.1",
    "nbformat==5.10.4",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "openai-agents>=0.4.2",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "psutil>=7.1.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sentence-transformers>=5.1.2",
    "setuptools>=80.9.0",
    "speedtest-cli>=2.1.3",
    "torch>=2.9.0",
    "torchviz>=0.0.3",
    "transformers>=4.57.1",
    "twilio>=9.8.5",
    "xgboost>=3.1.1",
]
